--- a/1. visualisation.ipynb
+++ b/1. visualisation.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le nombre de stations à l'air d'être repartie assez aléatoirememt, on prendra donc comme adresse de référence celle de l'un des membres du groupe :  1 rue de Rivoli, Paris, France.\n",
+    "Le nombre de stations à l'air d'être repartie assez aléatoirememt, on prendra donc comme adresse de référence une adresse choisie aléatoirement :  1 rue de Rivoli, Paris, France.\n",
     "\n",
     "\n",
     "Pour savoir le nombre de stations que l'on va proposer à l'usager on regarde le nombre de station autour de l'usager en fonction de la distance. "
