--- a/5. Rentabilité.ipynb
+++ b/5. Rentabilité.ipynb
@@ -10,23 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import osmnx as ox\n",
     "import pandas as pd\n",
-    "import networkx as nx\n",
-    "from geopy.geocoders import Nominatim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import module_projet as md #très long (16min)"
+    "import module_projet as md\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n"
    ]
   },
   {
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +47,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adresse=\"1 rue de Rivoli, France, Paris\"\n",
-    "carburant=\"Gazole\"\n",
-    "quanti=50"
+    "adresse=input(\"renseigner votre adresse\")\n",
+    "carburant=input(\"Renseigner le carburant souhaité\")\n",
+    "quanti=input(\"renseigner le nombre de litre souhaité\")\n",
+    "\n",
+    "df_renta=md.data_carb(dat_inst, carburant, ['id', 'ville', 'geom','prix_valeur','prix_nom'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#fonctions a récuperer dans le md\n",
+    "\n",
+    "def Adresse_to_gps(Adresse) : \n",
+    "\n",
+    "    geolocator = Nominatim(user_agent=\"arman.akgonul@ensae.fr\")\n",
+    "    location = geolocator.geocode(Adresse, timeout=10000)\n",
+    "    return str(str(location.latitude) + ','+ str(location.longitude))\n",
+    "\n",
+    "\n",
+    "def data_carb(df, carb, colonnes_utiles):\n",
+    "    data_1 = df[df.prix_nom == carb]\n",
+    "    d = data_1[colonnes_utiles]\n",
+    "    d.drop_duplicates(keep = 'first', inplace=True) \n",
+    "    return d\n",
+    "\n",
+    "# a ajouter : un traitement des NaN\n",
+    "    return d\n"
    ]
   },
   {
@@ -70,38 +89,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tout d'abord, on ne va garder que les stations services les plus proches pour ne pas surcharger la complexité. Il parait assez évident qu'une station classée quinzième en distance par exemple, ne sera pas la station la plus rentable"
+    "On a donc besoin d'une fonction qui calcule le prix du plein en fonction de la station d'essence choisie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_opti=md.dix_plus_proche_card(dat_inst, adresse, carburant) #voir module pour la fonction"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ensuite, on a donc besoin d'une fonction qui calcule le prix du plein en fonction de la station d'essence choisie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_test=df_renta.sample(50) #à remplacer par le df contentenant les plus proches stations\n",
+    "df_opti=df_test.assign(cout=1) #nouvelle colonne avec le cout du plein en tenant compte du trajet et du prix\n",
+    "\n",
+    "\n",
+    "\n",
     "def prix_plein(Quantité, position, station) : \n",
     "    A = list(map(float,position.split(',')))\n",
     "    B = list(map(float,df_opti.iloc[station,2].split(',')))\n",
     "    \n",
-    "    R,Dist= md.itinéraire(A,B)   #calcul de la distance avec la station \n",
-    "    D=Dist/1000 #on converti la distance en kilomètre\n",
+    "    D= distance1(A,B)/100    #calcul de la distance avec la station \n",
     "    conso_trajet=D*0.06 #calcul du nb de litre d'essence necessaire pour aller a la station\n",
     "    P=Quantité+conso_trajet #calcul du nb de litre necessaire pour faire le plein après le trajet\n",
     "    prix_L=df_opti.iloc[station,3] #prix au litre à la station\n",
@@ -115,51 +121,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On ajoute une nouvelle colonne à notre dataframe dans laquelle on implémentera plus tard le prix du plein dans cette station"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_opti=df_opti.assign(cout=1) #nouvelle colonne avec le cout du plein en tenant compte du trajet et du prix"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Ici on fait une boucle qui calcule le prix du plein pour toutes les stations pour trouver celle où il est le plus rentable d'aller"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nx' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[38], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m position\u001b[39m=\u001b[39mAdresse_to_gps(adresse) \u001b[39m#on sort cette ligne de la boucle, sinon le package \"Nomatim\" nous bloque pour usage trop récurrent\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(df_opti)) : \n\u001b[1;32m----> 4\u001b[0m     C\u001b[39m=\u001b[39mprix_plein(\u001b[39m50\u001b[39;49m,position,i) \u001b[39m#on calcule le prix du plein pour chaque station\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     df_opti\u001b[39m.\u001b[39miloc[i,\u001b[39m5\u001b[39m]\u001b[39m=\u001b[39mC \u001b[39m#on ajoute ce prix dans le dataframe\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[34], line 5\u001b[0m, in \u001b[0;36mprix_plein\u001b[1;34m(Quantité, position, station)\u001b[0m\n\u001b[0;32m      2\u001b[0m A \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mfloat\u001b[39m,position\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)))\n\u001b[0;32m      3\u001b[0m B \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mfloat\u001b[39m,df_opti\u001b[39m.\u001b[39miloc[station,\u001b[39m2\u001b[39m]\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)))\n\u001b[1;32m----> 5\u001b[0m R,Dist\u001b[39m=\u001b[39m md\u001b[39m.\u001b[39;49mitinéraire(A,B)   \u001b[39m#calcul de la distance avec la station \u001b[39;00m\n\u001b[0;32m      6\u001b[0m D\u001b[39m=\u001b[39mDist\u001b[39m/\u001b[39m\u001b[39m1000\u001b[39m \u001b[39m#on converti la distance en kilomètre\u001b[39;00m\n\u001b[0;32m      7\u001b[0m conso_trajet\u001b[39m=\u001b[39mD\u001b[39m*\u001b[39m\u001b[39m0.06\u001b[39m \u001b[39m#calcul du nb de litre d'essence necessaire pour aller a la station\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\arman\\OneDrive\\Bureau\\projet-python\\module_projet.py:103\u001b[0m, in \u001b[0;36mitinéraire\u001b[1;34m(position, station)\u001b[0m\n\u001b[0;32m    101\u001b[0m start_node \u001b[39m=\u001b[39m ox\u001b[39m.\u001b[39mnearest_nodes(G, a,b)\n\u001b[0;32m    102\u001b[0m end_node \u001b[39m=\u001b[39m ox\u001b[39m.\u001b[39mnearest_nodes(G, x,y) \u001b[39m# Calculate the shortest path\u001b[39;00m\n\u001b[1;32m--> 103\u001b[0m route \u001b[39m=\u001b[39m nx\u001b[39m.\u001b[39mshortest_path(G, start_node, end_node, weight\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlength\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m#Plot the route and street networks\u001b[39;00m\n\u001b[0;32m    104\u001b[0m length \u001b[39m=\u001b[39m nx\u001b[39m.\u001b[39mshortest_path_length(G, source\u001b[39m=\u001b[39mstart_node, target\u001b[39m=\u001b[39mend_node, weight\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlength\u001b[39m\u001b[39m'\u001b[39m, method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mdijkstra\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    105\u001b[0m \u001b[39mreturn\u001b[39;00m(route, length)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nx' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "position=Adresse_to_gps(adresse) #on sort cette ligne de la boucle, sinon le package \"Nomatim\" nous bloque pour usage trop récurrent\n",
     "for i in range(len(df_opti)) : \n",
     "    C=prix_plein(50,position,i) #on calcule le prix du plein pour chaque station\n",
     "    df_opti.iloc[i,5]=C #on ajoute ce prix dans le dataframe\n",
-    "\n"
+    "\n",
+    "df_opti = df_opti.sort_values('cout', ascending=True)\n"
    ]
   },
   {
@@ -185,15 +162,133 @@
     }
    ],
    "source": [
-    "df_opti = df_opti.sort_values('cout', ascending=True) #tri de manière croissante du coût les stations \n",
-    "\n",
     "print(df_opti.head(1)) #station la plus rentable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette méthode a le défaut de calculer la distance à vol d'oiseau ce qui n'est pas nécessairement e chemin suivi par les voies routières. Ainsi, on va vouloir calculer des itinéraires pour déterminer les stations les plus proches en voiture.\n",
+    "Tout d'abord, on importe les modules suivants : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import osmnx as ox\n",
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "qui vont permettrent de créer des graphes à partir des données de OpenStreetMap :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_graph(loc, dist, transport_mode, loc_type=\"address\"):\n",
+    "###Transport mode = ‘walk’, ‘bike’, ‘drive’, ‘drive_service’, ‘all’, ‘all_private’, ‘none’\n",
+    "    if loc_type == \"address\":\n",
+    "        G = ox.graph_from_address(loc, dist=dist, network_type=transport_mode)\n",
+    "    elif loc_type == \"points\":\n",
+    "        G = ox.graph_from_point(loc, dist=dist, network_type=transport_mode )\n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = create_graph(\"Ile de France\", 50000, \"drive\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dont on pondère les arêtes : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = ox.add_edge_speeds(G) #Impute\n",
+    "G = ox.add_edge_travel_times(G)\n",
+    "G = ox.distance.add_edge_lengths(G) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ce qui à l'aide d'un algorithme de recherche du plus court chemin (basé sur Dijkstra) permet de créer des itinéraires entre deux points : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def itinéraire(position, station):\n",
+    "    a,b = position\n",
+    "    x,y = station\n",
+    "    start_node = ox.nearest_nodes(G, a,b) #trouve le noeud du graphe le plus proche de la position\n",
+    "    end_node = ox.nearest_nodes(G, x,y) \n",
+    "    route = nx.shortest_path(G, start_node, end_node, weight='length') #trouve le plus court chemin\n",
+    "    length = nx.shortest_path_length(G, source=start_node, target=end_node, weight='length', method=\"dijkstra\") #trouve la longueur de ce chemin\n",
+    "    return(route, length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "qui renvoie le meilleur itinéraire (en terme de distance) entre deux points ainsi que sa longueur (en mètre). Cela permet alors de trouver les x stations les plus proches en terme de distance à parcourir en voiture et non à vol d'oiseau : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import module_projet as md\n",
+    "\n",
+    "def x_plus_proche(data, position , carb, nbr_stations):\n",
+    "    data_mask = data['Nom Officiel Région']=='Île-de-France'\n",
+    "    data_1 = data[data_mask]\n",
+    "    data_2 = md.data_carb(data_1, carb, ['adresse', 'ville', 'prix_valeur', 'prix_nom', 'geom'])\n",
+    "    pos = list(map(float,md.Adresse_to_gps2(position).split(',')))\n",
+    "    def iti(station):\n",
+    "        pos_sta = list(map(float, station.split(',')))\n",
+    "        a = pos_sta[0]\n",
+    "        pos_sta[0] = pos_sta[1]\n",
+    "        pos_sta[1] = a\n",
+    "        return(itinéraire(pos, pos_sta)[1])\n",
+    "    vector = data_2['geom'].apply(iti).sort_values().head(nbr_stations)\n",
+    "    return(vector)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -207,12 +302,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ee4c60ed9f2d143d855c3de7cdf8e81ef9399a07140d5084c19be7d5d534dff2"
+    "hash": "cc7739b244f974916000a7d8eb95217d7b293019de62b65f8f3aaabbca2f3ce9"
    }
   }
  },
